# wowlogs

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
migrations/: V0__init.sql  V1__event_types.sql  V2__spell_casts.sql
src/: main.rs  migrations.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  migrations.rs
ui/: App.tsx  Root.tsx  main.tsx  routes.tsx  shims.d.ts
ui/api/: encounter.ts  pulls.ts
ui/charts/: TimeseriesChart.tsx  plugins.ts
ui/encounters/: EncounterOverview.tsx  Layout.tsx  Overview.tsx
ui/encounters/pulls/: DamageDone.tsx  Layout.module.css  Layout.tsx  Overview.module.css  Overview.tsx  PullOverview.tsx  Summary.tsx
ui/shared/: icons.ts
