[package]
name = "logparse"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0.67"

[workspace]
members = ["src-tauri"]
