[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.6", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-cli = "2.2.0"
thiserror = "2.0.12"
anyhow = "1.0.97"
clap = "4.5.35"
chrono = { version = "0.4.40", features = ["serde"] }
rusqlite = { version = "0.33", features = ["chrono"] }
refinery = { version = "0.8.16", features = ["rusqlite-bundled"] }
csv = "1.3.1"
